# Ascend_USBCamera_yolov5

./: readme.md
Ascend310B/config/face_recognition/: aipp.cfg  fusion_result.json
Ascend310B/config/sample_recognition/: readme.md
Ascend310B/src/my_interfaces/: CMakeLists.txt  package.xml
Ascend310B/src/my_interfaces/msg/: DetectionBox.msg
Ascend310B/src/socket/: CMakeLists.txt  package.xml
Ascend310B/src/socket/include/socket/: FFmpegVideoDecoder.h  socket2PC.h
Ascend310B/src/socket/src/: FFmpegVideoDecoder.c  socket2PC.cpp
Ascend310B/src/vision/face_recognition/: CMakeLists.txt  package.xml
Ascend310B/src/vision/face_recognition/include/face_recognition/: face_recognition.h  label.h
Ascend310B/src/vision/face_recognition/launch/: face_recognition_launch.py
Ascend310B/src/vision/face_recognition/src/: dvppProcess.cpp  face_recognition.cpp
Ascend310B/src/vision/samples_recognition/: CMakeLists.txt  package.xml
Ascend310B/src/vision/samples_recognition/include/samples_recognition/: label.h  recognition.h
Ascend310B/src/vision/samples_recognition/src/: recognition.cpp
PC/: Makefile  orangepi_imageShow.cpp
